--- a/Alba.CsCss/Original/nsCSSScanner.tt
+++ b/Alba.CsCss/Original/nsCSSScanner.tt
@@ -20,7 +20,6 @@
 // Generated file. Do not edit manually.
 //
 // ReSharper disable RedundantUsingDirective
-// ReSharper disable FieldCanBeMadeReadOnly.Local
 // ReSharper disable RedundantCast
 
 using System;
@@ -49,30 +48,10 @@ internal partial class <#=className#>
 
     string ConvertSource (string source) {
         return source
+
             // whitespace
             .ReReplace(@"\r", "")
-            // preprocessor
-            .ReReplace(@"#include .*", "")
-            .ReReplace(@"#undef .*", "")
-            .ReReplace(@"#ifdef DEBUG", "#if DEBUG")
-            .ReReplace(@"using .*", "")
-            // common c++ fixes
-            .Replace(@"PRUnichar(')')", "((PRUnichar)(')'))")
-            // common c++
-            .ReReplace(@"static const", "private const")
-            .ReReplace(@"\) const\n", ")\n") // const functions
-            .ReReplace(@"inline", "")
-            .ReReplace(@"(u?int\d+_t|double|PRUnichar)\((" + sArgs + @")\)", "(($1)($2))") // casts in functional style
-            .ReReplace(@"(u?int\d+_t|double|PRUnichar)\((" + sArgs + @")\)", "(($1)($2))") // cast inside cast
-            // common c++ functions
-            .Replace(@"std::min", "Math.Min")
-            .Replace(@"std::max", "Math.Max")
-            .Replace(@"pow", "Math.Pow")
-            // common c++ consts
-            .Replace(@"INT32_MAX", "Int32.MaxValue")
-            .Replace(@"INT32_MIN", "Int32.MinValue")
-            // specific c++
-            .Replace(@"while (--i)", "while (--i != 0)")
+
             // specific mozilla
             .Replace(@"MOZ_LIKELY(ch < 0 || ch == ')')", "ch < 0 || ch == ')'")
             // common mozilla
@@ -81,6 +60,7 @@ internal partial class <#=className#>
             .ReReplace(@"(?s)MOZ_ASSERT\((" + sArgs + @")\)", "Debug.Assert($1)")
             .ReReplace(@"(?s)MOZ_(?:UN)?LIKELY\((" + sArgs + @")\)", "$1")
             .ReReplace(@"(?s)NS_ERROR\((" + sArg + @")\)", "throw new Exception($1)")
+
             // specific methods removal
             .ReReplace(@"(?s)nsCSSScanner::nsCSSScanner\(StringBuilder aBuffer, uint32_t aLineNumber\).*?\n}\n", "")
             .ReReplace(@"(?s)nsCSSScanner::~nsCSSScanner\(\).*?\n}\n", "")
@@ -94,22 +74,47 @@ internal partial class <#=className#>
             .ReReplace(@"nsCSSToken&", "ref nsCSSToken")
             .ReReplace(@"(\w+)\(aToken\)", "$1(ref aToken)")
             .Replace(@"Append(&mBuffer[mOffset]", "Append(mBuffer, mOffset")
-            // specific #define-style consts
-            .ReReplace(@"#define +(\w+) +(\w+)\n", "private const uint8_t $1 = $2;\n")
-            .ReReplace(@"#define +(\w+) +([\w|]+)\n", "private const uint8_t $1 = $2;\n")
             // specific enums
             .ReReplace(@"eCSSToken_(\w+)", "nsCSSTokenType.$1")
             // specific vars
-            .Replace(@"const uint8_t gLexTable[] =", "static uint8_t[] gLexTable =")
+            .Replace(@"static const uint8_t gLexTable[] =", "private static readonly uint8_t[] gLexTable =")
             // specific expressions
             .Replace(@"AppendUCS4ToUTF16(ENSURE_VALID_CHAR(val), aOutput)", "aOutput.Append(val)")
             .Replace(@"aToken.mSymbol = Peek()", "aToken.mSymbol = (char)Peek()") // Peek returns int
             .Replace(@"aToken.mSymbol = ch", "aToken.mSymbol = (char)ch") // ch is int
             .Replace(@"aToken.mNumber = value", "aToken.mNumber = (float)value") // precision lost
-            .Replace(@"((uint32_t)(ch)) < 128", "ch >= 0 && ch < 128") // uint32_t is Int32...
+            .Replace(@"uint32_t(ch) < 128", "ch >= 0 && ch < 128") // uint32_t is Int32...
+            // specific preprocessor
+            .ReReplace(@"#define +(\w+) +(\w+)\n", "private const uint8_t $1 = $2;\n")
+            .ReReplace(@"#define +(\w+) +([\w|]+)\n", "private const uint8_t $1 = $2;\n")
+
+            // specific c++
+            .Replace(@"while (--i)", "while (--i != 0)")
+
+            // common c++ fixes
+            .Replace(@"PRUnichar(')')", "((PRUnichar)(')'))")
+            // common c++ functions
+            .Replace(@"std::min", "Math.Min")
+            .Replace(@"std::max", "Math.Max")
+            .Replace(@"pow", "Math.Pow")
+            // common c++ consts
+            .Replace(@"INT32_MAX", "Int32.MaxValue")
+            .Replace(@"INT32_MIN", "Int32.MinValue")
             // common c++
+            .ReReplace(@"static const", "private const")
+            .ReReplace(@"\) const\n", ")\n") // const functions
+            .ReReplace(@"inline", "")
+            .ReReplace(@"(u?int\d+_t|double|PRUnichar)\((" + sArgs + @")\)", "(($1)($2))") // casts in functional style
+            .ReReplace(@"(u?int\d+_t|double|PRUnichar)\((" + sArgs + @")\)", "(($1)($2))") // cast inside cast
             .ReReplace(@"->", ".")
             .ReReplace(@"::", ".")
+
+            // common preprocessor
+            .ReReplace(@"#include .*", "")
+            .ReReplace(@"#undef .*", "")
+            .ReReplace(@"#ifdef DEBUG", "#if DEBUG")
+            .ReReplace(@"using .*", "")
+
             // whitespace
             .ReReplace(@"\n\s*;\n", "\n")
             .ReReplace(@"\n{3,}", "\n\n")
