--- a/Alba.CsCss/Original/nsCSSPropList.tt
+++ b/Alba.CsCss/Original/nsCSSPropList.tt
@@ -2,6 +2,7 @@
 <#@ output extension="/" #>
 <#@ include file="..\T4\Common.ttinclude" #>
 <#@ include file="nsCSSPropList.ttinclude" #>
+<#@ include file="nsCSSPropAliasList.ttinclude" #>
 <#
     var T4 = GetT4();
     T4.GenerateFile("nsCSSPropList.txt", () => GenerateCssPropListText());
@@ -58,7 +59,9 @@ namespace Alba.CsCss
         COUNT,
         [EditorBrowsable(EditorBrowsableState.Never)]
         COUNT_DUMMY2 = COUNT - 1,
-        // TODO #include "nsCSSPropAliasList.h"
+<#+   foreach (CssPropAlias prop in GetCssPropAliases()) { #>
+        Alias_<#= prop.Id #>,
+<#+   } #>
         COUNT_with_aliases,
         [EditorBrowsable(EditorBrowsableState.Never)]
         COUNT_DUMMY3 = COUNT_with_aliases - 1,
