--- a/Alba.CsCss/Original/nsCSSPropList.tt
+++ b/Alba.CsCss/Original/nsCSSPropList.tt
@@ -31,8 +31,8 @@
 // StyleStruct: <#= propn.StyleStruct #>
 // StyleStructOffset: <#= propn.StyleStructOffset ?? "null" #>
 // AnimType: <#= propn.AnimType #>
-// IfDef: <#= propn.IfDef ?? "null" #>
 <#+ } /* if (propn != null) */ #>
+// IfDef: <#= prop.IfDef ?? "null" #>
 <#+ } /* foreach (CssPropBase prop in GetCssProps()) */ #>
 <#+ } /* void GenerateCssPropListText */ #>
 
@@ -47,13 +47,13 @@ namespace Alba.CsCss
 {
     enum nsCSSProperty {
         UNKNOWN = -1,
-<#+   foreach (CssProp prop in GetCssProps()) { #>
+<#+   foreach (CssProp prop in GetCssProps(CommonDefs)) { #>
         <#= prop.Id != "float" ? prop.Id : "@float" #>,
 <#+   } #>
         COUNT_no_shorthands,
         [EditorBrowsable(EditorBrowsableState.Never)]
         COUNT_DUMMY = COUNT_no_shorthands - 1,
-<#+   foreach (CssPropShort prop in GetCssPropsShort()) { #>
+<#+   foreach (CssPropShort prop in GetCssPropsShort(CommonDefs)) { #>
         <#= prop.Id #>,
 <#+   } #>
         COUNT,
