--- a/Alba.CsCss/Style/Original/nsCSSScanner.tt
+++ b/Alba.CsCss/Style/Original/nsCSSScanner.tt
@@ -1,6 +1,6 @@
 <#@ template hostspecific="true" debug="true" #>
 <#@ output extension="/" #>
-<#@ include file="..\T4\Common.ttinclude" #>
+<#@ include file="..\..\T4\Common.ttinclude" #>
 <#
     Regex reSourceToken = new Regex(@"(?s)/\* Out-of-line nsCSSToken methods. \*/(.*)/\* nsCSSScanner methods. \*/");
 
@@ -32,7 +32,7 @@ using uint8_t = System.SByte;
 using uint32_t = System.Int32;
 using PRUnichar = System.Char;
 
-namespace Alba.CsCss
+namespace Alba.CsCss.Style
 {
 internal partial class <#=className#>
 {
