nsCSSProps conversion WIP (added nsStyleAnimType enum and defines from nsCSSProps.h)

--- a/Alba.CsCss/Style/Original/nsCSSKeywordList.tt
+++ b/Alba.CsCss/Style/Original/nsCSSKeywordList.tt
@@ -33,7 +33,7 @@ namespace Alba.CsCss.Style
     {
         UNKNOWN = -1,
 <#+   foreach (CssKeyword key in GetCssKeywords()) { #>
-        <#=ToCsId(key.Id)#>,
+        <#=ToId(key.Id)#>,
 <#+   } #>
         COUNT
     }
