nsCSSParser conversion WIP (4263 errors left)

--- a/Alba.CsCss/Style/Original/nsCSSFontDescList.tt
+++ b/Alba.CsCss/Style/Original/nsCSSFontDescList.tt
@@ -30,9 +30,11 @@ namespace Alba.CsCss.Style
 {
     internal enum nsCSSFontDesc
     {
+        UNKNOWN,
 <#+   foreach (CssFontDesc desc in GetCssFontDescs()) { #>
         <#= desc.Method #>,
 <#+   } #>
+        COUNT
     }
 }
 <#+ } /* void GenerateCssFontDesc */ #>
